@@ -20,6 +20,7 @@ import java.util.Base64;
 public class FileParse {
     private static final String DIR = "backend";
     private Logger log = LoggerFactory.getLogger(this.getClass());
+    private static final String PREFIX = "data:image/svg+xml;base64,";
     @Autowired
     private MinioClient minioClient;
     @Value("${minio.bucketName}")
@@ -48,15 +49,15 @@ public class FileParse {
         return filePath;
     }
 
-    public String uploadFile(String fileName, String str64) {
-
+    public String uploadFile(String fileName, String str) {
         String filePath = null;
         try {
+            String str64 = str.replace(PREFIX, "");
             DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
             String path = LocalDateTime.now().format(formatter);
-            fileName = DIR + '/' + path + '/' + fileName + ".svg";
-            Base64.Decoder decoder = Base64.getDecoder();
-            byte[] bytes = decoder.decode(str64);
+//            fileName = DIR + '/' + path + '/' + fileName + ".svg";
+            fileName = DIR + '/' + path + '/' + fileName + ".png";
+            byte[] bytes = DatatypeConverter.parseBase64Binary(str64);
 //            byte[] bytes = DatatypeConverter.parseBase64Binary(str64);
             ByteArrayInputStream inputStream = new ByteArrayInputStream(bytes);
             PutObjectArgs objectArgs = PutObjectArgs.builder().object(fileName)
